Only set slider range when there is a valid media object

When e.g. the player is stopped we get a totalTime of -1, which causes an assert down the line

BUG: 483242